# cds-proto-etl

./: .env.example  AGENTS.md  README.md  pyproject.toml
migrations/: 004_create_search_volumes.sql  005_create_country_search_volumes.sql
src/google_trends_etl/: config.py  country_search_volumes_main.py  extract_country_search_volumes.py  extract_search_volumes.py  load.py  load_country_search_volumes.py  load_search_volumes.py  main.py  migrate.py  search_volumes_main.py  transform.py  transform_country_search_volumes.py  transform_search_volumes.py
tests/: test_search_volume_transforms.py  test_top_trends_main.py
